--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,4 +4,7 @@
         <h2>{{ object.title }}</h2>
         <p>{{ object.body }}</p>
     </div>
+
+    <div><a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a></div>
+    <div><a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a></div>
 {% endblock content %}
